rettelser til introduktion

--- a/Rapport/1Chapters/1Preanalysis/Introduction.tex
+++ b/Rapport/1Chapters/1Preanalysis/Introduction.tex
@@ -1,6 +1,6 @@
 \chapter{Introduction}
 
-The market for Bluetooth loudspeakers has been growing considerably the last few years. According to \gls{CTA} the revenue of wireless loudspeakers has been growing 69 \% between 2013 and 2014 \cite{sou:CTA}. The high growth is partly due to the increasing usage of smartphones and music streaming services, such as Spotify. As a result it is now more desirable for some users to wirelessly connect the smartphone to an audio system through for instance Bluetooth. By doing so, the user can use the smartphone to remote control his or her audio system. 
+The market for Bluetooth loudspeakers has been growing considerably the last few years. According to \gls{CTA} the revenue of Bluetooth loudspeakers has been growing 69 \% between 2013 and 2014 \cite{sou:CTA}. The high growth is partly due to the increasing usage of smartphones and music streaming services, such as Spotify. As a result it is now more desirable for some users to wirelessly connect the smartphone to an audio system through for instance Bluetooth. By doing so, the user can use the smartphone to remote control his or her audio system. 
 
 Wireless loudspeakers are primarily active loudspeakers and are usually small. As a result of the physical limitations the loudspeaker may not play very loud and the performance of the loudspeaker in the bass region is limited. To compensate for the lack of bass the user may want to boost the bass in order to achieve a more rich sound. However because of the limited size, increasing the bass can potentially lead to sound distortions caused by clipping or enclosure vibrations. The measurements in \autoref{fig:introduction} shows how a boost in the bass region can distort the sound.
 
@@ -12,7 +12,7 @@ Wireless loudspeakers are primarily active loudspeakers and are usually small. A
 \label{fig:introduction}
 \end{figure}
 % The measurements are recorded by a microphone and shows the distorted sound created by a small active loudspeaker. The loudspeaker is set to playback a 100 Hz sinusoid with two different amplitudes. 
-As shown in \autoref{fig:introduction}, pushing the loudspeaker too much will create distorted sound caused by the vibrations created by the speaker enclosure. This results in an unpleasant sound which is undesirable for the user. The purpose of this project is therefore to improve the maximum output of a speaker while not changing the physical limitation or breaking it. 
+As shown in \autoref{fig:introduction}, pushing the loudspeaker too much will create distorted sound caused by the vibrations created by the speaker enclosure. This results in an unpleasant sound which is undesirable for the user. The purpose of this project is therefore to improve the performance of a speaker while not changing the physical limitation or breaking it. 
 % The purpose of this project is therefore to develop an real-time embedded system to an wireless active loudspeaker which can both improve the sound and avoid distortion created by enclosure vibration and clipping.
 
 
