--- a/Rapport/00setup/mybib.bib
+++ b/Rapport/00setup/mybib.bib
@@ -29,3 +29,11 @@
     edition  = "2nd",
     year      = "2003",
 }
+
+@MISC{DaliSpec,
+  title = {DALI ZENSOR 1 AX},
+  author = {{DALI}},
+  note = {Downloaded February 19, 2016},
+  howpublished = {\url{http://www.dali-speakers.com/loudspeakers/zensor/zensor-1-ax/}},
+  year = {2016},
+}
