adding sensor file

--- a/Rapport/00setup/glossaries.tex
+++ b/Rapport/00setup/glossaries.tex
@@ -72,7 +72,7 @@
 \newacronym{HAL}{HAL}{Hardware Abstraction Layer}
 \newacronym{RC}{RC}{Remote Controller}
 \newacronym{CTA}{CTA}{Consumer Technology Association}
-
+\newacronym{SPL}{SPL}{Sound Pressure Level}
 
 
 
