--- a/Rapport/1Chapters/1Preanalysis/Equalizer.tex
+++ b/Rapport/1Chapters/1Preanalysis/Equalizer.tex
@@ -16,10 +16,11 @@ It is a generally accepted fact that sound is perceived differently from person 
 \item High frequency, $ 5.5 \text{ kHz} < $, sound are again attenuated.
 \end{itemize}
 
-Further investigation shows that frequency spectrum needed for understanding speech lies in 300 Hz to 3.4 Khz \citep{sou:VoiceFundamentals}. From the evolutionary perspective it makes sense that human hearing is optimized for hearing other humans talk. The main conclusion from ISO 223:2003 is that people are worse at 
+Further investigation shows that frequency spectrum needed for understanding speech lies in 300 Hz to 3.4 Khz \citep{sou:VoiceFundamentals}. From the evolutionary perspective it makes sense that human hearing is optimized for hearing other humans talk. The main conclusion from ISO 223:2003 is that people will have a tendency to wanting more gain in lower frequency sound. This problem is resolved by equalization.
 
 \subsection{Equalization}
-Since the perception of sound is non linear, there is need for equalization of the different frequencies in order to hear the lower sound just as much as the midrange and high frequency spectrum. With   
+
+Since the perception of sound is non linear, there is need for equalization of the different frequencies in order to hear the lower sound just as much as the midrange and high frequency spectrum. By implementing an equalizer it is possible to manipulate different areas of the frequency. Conforming with \autoref{fig:SoundPerceived}, it can be seen that an increase in bass could be needed if played at a low \gls{SPL} 
 
 
 \subsection{Distortion}
