Skrevet Speaker Vibration og næsten hele distortion

--- a/Rapport/1Chapters/1Preanalysis/Equalizer.tex
+++ b/Rapport/1Chapters/1Preanalysis/Equalizer.tex
@@ -41,7 +41,9 @@ Lastly it is important to know what type of sound is wanted in the system. What 
 \item Odd Distortion
 \item Even Distortion
 \end{itemize}
-These are classified by looking at the fundamental frequency. 
+These are classified by looking at the fundamental frequency and is then categorized by how far away, indexed by whole integers, they are from the fundamental frequency. 
+
+Generally speaking it is desirable to have even harmonics since they are perceived as "warm and full" sound. Odd harmonics are perceived as "cold and metallic". 
 
 
 $A_4$ note at 440 Hz
