--- a/Rapport/0formalia/preface.tex
+++ b/Rapport/0formalia/preface.tex
@@ -1,7 +1,7 @@
 \chapter*{Preface}\label{ch:forord}%\addcontentsline{toc}{chapter}{Forord}
 This report has been carried out during spring of 2016 as a 6. semester Electronics and IT student bachelor project at Aalborg University by group 16grXXX. The project concerns the development of Somehting extremely awesome.
 
-The project will be developed in cooperation with Danish Audiophile Loudspeaker Industries (DALI) (refer to appendix \autoref{app:dali} for further information) whome will help with guidance of the project and speakers for the project.   
+The project will be developed in cooperation with Danish Audiophile Loudspeaker Industries (DALI) (refer to \autoref{app:dali} for further information) whome will help with guidance of the project and speakers for the project.   
 \\\\
 %The report has the following structure: First, the segway platform is described and requirements to the controller are made. Hereafter, a model of the system is derived, and the controller can be made. Also, two digital filters are designed, together with a communication protocol between the segway and the wireless remote controller. Finally, an acceptance test and a discussion is made.\\
 %The reader of the report is assumed to have a basic understanding of physics, modelling electromechanical systems and basic controller design.
