--- a/Rapport/1Chapters/1Preanalysis/vibration.tex
+++ b/Rapport/1Chapters/1Preanalysis/vibration.tex
@@ -1,6 +1,35 @@
 \section{Vibrations from enclosure and driver}
 
-A common problem when designing loudspeakers is the vibrations from the enclosure. If the vibrations are strong, they will become audible and distort the overall sound. The sound radiation from the enclosure will become greater if there is no damping element between the mounted surface and the enclosure.
+A common problem when designing loudspeakers is the vibrations from the enclosure. If the vibrations are strong, they will become audible and distort the overall sound. The sound radiation from the enclosure will become greater when the \gls{SPL} from the speaker increase. This problem is solved with different techniques but yield more or less the same outcome, which is stiffening of the enclosure. Some of the techniques for removing vibrations from the enclosure could be:
+\begin{itemize}
+\item Mechanical decoupling of the drivers from the enclosure.
+\item Denser or heavier construction material with a high natural frequency, making it harder for the enclosure to start vibrating.
+\item Dampening material or complex structural design inside the cabinet to disperse the sound.
+\end{itemize}
+\todo[inline]{Skal nok lige skaffe nogle kilder på de udtagelser}
+
+Looking further into the speaker driver itself, it shows in \autoref{fig:SpeakerModelStress} that parts in the driver also creates unwanted vibrations. The goal of the speaker driver is to reproduce the electrical signal as an acoustical signal. This is done by using a membrane which is suspended in a very light and easy to move material. An Induction in the coil is created in a permanent magnet creating a a electro magnetic force resulting in the membrane moving. The goal will always be to loose as little as possible energy, giving the most perfect output. The driver simply needs to be as powerfull, light, stiff and efficient as possible.
+
+\begin{figure}[H]
+\centering
+\begin{subfigure}[t]{0.47\textwidth}
+\includegraphics[width=\linewidth]{SpeakerGOOD}
+	\caption{Regular speaker driver showing suspension, membrane and the driver magnet.}
+	\label{fig:regularspeaker}
+\end{subfigure}
+\hspace{6mm} 
+\begin{subfigure}[t]{0.47\textwidth}
+\includegraphics[width=\linewidth]{SpeakerBAD}
+	\caption{Regular speaker driver with red markings showing stress areas}
+	\label{fig:badspeaker}
+\end{subfigure}
+\caption{A Speaker driver, where \ref{fig:badspeaker} shows the stress points outlined with red.}
+\label{fig:SpeakerModelStress}
+\end{figure}
+
+When this signal has a large amplitude, read overload, the membrane reaches physical capacity. In \autoref{fig:badspeaker} it shows that when a membrane is pushed to its maximum capacity the suspension will affect the membrane causing unwanted distortion. This will be one of the major problems if the membrane is assumed sufficiently stiff to with stand the high \gls{SPL} and not twist during playback. 
+
+Another notice is the membrane hitting the coil connected to the magnet. This would again result in distortion since the membrane is now again hitting the absolute furthest position possible. This situation can however be resolve be moving the magnet further back. This would make the suspension determine how far the membrane can be pushed.
 
 
 %that occurs at playback. The vibrations occurs because the  If the vibration. the sound radiated from the loudspeaker enclosure
