--- a/Rapport/2Appendix/DALI.tex
+++ b/Rapport/2Appendix/DALI.tex
@@ -1,4 +1,4 @@
-\section{Danish Audiophile Loudspeaker Industries (DALI)} \label{app:dali}
+\chapter{Danish Audiophile Loudspeaker Industries (DALI)} \label{app:dali}
 DALI is a loudspeaker manufacture from Denmark and mainly produces and develops high quality passive and active loudspeakers. An advantages of cooperating with DALI is their many years of experience in developing high quality loudspeakers. Because of this, they can help with stressing out actual problems in wireless loudspeakers.
 
 Among their products, they have recently introduced a new version of their DALI Zensor-series, which is the DALI Zensor 1 AX, which can be seen \autoref{fig:dali_zensor} and DALI Zensor 5 AX. The  new versions include a amplification stage with a Bluetooth module, so the user can interface to the loudspeakers wirelessly. The amplification stage includes a pre-amplifier with a embedded system included. The purpose of the embedded system is to process the audio signal to achieve a better sound.
