--- a/Rapport/1Chapters/1Preanalysis/Problemanalysis.tex
+++ b/Rapport/1Chapters/1Preanalysis/Problemanalysis.tex
@@ -2,10 +2,20 @@
 
 This section will enlighten the problems concerning manipulation of sound. How is sound perceived, what is heard as warm sound and what is heard as distortion. Furthermore what kinds of situations concerning what creates the distortion in a loudspeaker. 
 
-\input{1Chapters/1Preanalysis/Equalizer.tex}
+\section{Test of DALI speaker}
+
+Describe where is goes wrong in the DALI speaker.
+
+\begin{itemize}
+\item What frequencies 
+\item Where in the enclosure
+\end{itemize}
+
 
 \input{1Chapters/1Preanalysis/audioClipping.tex}
 
 \input{1Chapters/1Preanalysis/vibration.tex}
+
+\input{1Chapters/1Preanalysis/Equalizer.tex}
 
 \section{Problem Statement}
