--- a/Rapport/1Chapters/1Preanalysis/audioClipping.tex
+++ b/Rapport/1Chapters/1Preanalysis/audioClipping.tex
@@ -1,5 +1,10 @@
 \section{Audio clipping}
 
+\begin{itemize}
+\item Describe where clipping goes wrong in the DALI speaker
+\end{itemize}
+
+
 Audio clipping is a situation that occurs when the output signal has a greater signal level than the device is capable of producing. If the signal level is beyond the limitation of the device, the device will cut the signal to its maximum level. This type of clipping is called hard clipping and is often undesirable. In \autoref{fig:audioclipping} an example of how hard clipping affects a 1 kHz sinusoid with a peak amplitude of 1.5. The maximum output level of the device is simulated to be 1.
 
 \begin{figure}[H]
