--- a/Rapport/1Chapters/1Preanalysis/vibration.tex
+++ b/Rapport/1Chapters/1Preanalysis/vibration.tex
@@ -1,5 +1,10 @@
 \section{Vibrations from enclosure and driver}
 
+\begin{itemize}
+\item Where does the vibrations start?
+\end{itemize}
+
+
 A common problem when designing loudspeakers is the vibrations from the enclosure. If the vibrations are strong, they will become audible and distort the overall sound. The sound radiation from the enclosure will become greater when the \gls{SPL} from the speaker increase. This problem is solved with different techniques but yield more or less the same outcome, which is stiffening of the enclosure. Some of the techniques for removing vibrations from the enclosure could be:
 \begin{itemize}
 \item Mechanical decoupling of the drivers from the enclosure.
