--- a/Rapport/00setup/glossaries.tex
+++ b/Rapport/00setup/glossaries.tex
@@ -73,8 +73,10 @@
 \newacronym{RC}{RC}{Remote Controller}
 \newacronym{CTA}{CTA}{Consumer Technology Association}
 \newacronym{SPL}{SPL}{Sound Pressure Level}
-
-
+\newacronym{SNR}{SNR}{Signal to noise ratio}
+\newacronym{MIPS}{MIPS}{Millions of instructions per second}
+\newacronym{I2S}{I$^2$S}{Inter-IC sound}
+\newacronym{DSP}{DSP}{Digital Signal Processor}
 
 
 
