--- a/Rapport/1Chapters/1Preanalysis/TechnicalAnalysis_DSP.tex
+++ b/Rapport/1Chapters/1Preanalysis/TechnicalAnalysis_DSP.tex
@@ -1,1 +1,34 @@
-\section{why a DSP?}
+\section{Processor Platform}
+This section will reference the demands for the processor platform given by DALI and analyse which processor platform will be optimal for these condition. 
+
+\subsection*{Demands for the platform}
+The demands for the processor platform have been derived in a mail corresodance with DALI 
+\todo[inline]{Reference til CD}
+
+\textbf{Sample rate} \\
+The sample rate must be 96 kHz. 
+
+\textbf{Bit resolution} \\
+There must be support for audio in at least a 24 bit resolution but a 32 bit resolution would be prefered.
+
+\textbf{\gls{SNR}} \\
+A minimum \gls{SNR} of 120 dB must be achieved.
+
+\textbf{Instructions pr. sample.} \\
+The processor must a least be able to run 1024 intructions pr. sample. which would give approximately 100 \gls{MIPS}
+
+\textbf{Interfacing} \\
+The platform must be able to interface with an ADC and DAC with the bus type \gls{I2S}. Besides the interfacing with the ADC and DAC the platform must be able to interface with the chosen sensor in \autoref{sec:Sensor}.
+
+The 32 bit resolution is prefered by DALI over a 24 bit resolution because it would give a increased \gls{SNR} of 48 dB. These demands lead to the analyzation of which platform would be the most optimal.   
+
+\subsection*{Choice of processor platform}
+For the choice of processor platform different types of platforms could be used, such as a microcontroller or a \gls{DSP}. These two types of processors have different advantage and disadvantages which needs to be analyzed to find the most optimal platform for the demands above.
+
+The basic difference between a microcontroller and a \gls{DSP} is that the \gls{DSP} is designed for fast calculating and moving data while the microcontroller is designed to be more flexible in its use and have more features.
+
+Because the need for filtering in an equalizer is needed and the high performance demands from above the natural choice of platform would be a \gls{DSP} without further consideration.     
+
+
+
+
