--- a/Rapport/1Chapters/1Preanalysis/TechnicalAnalysis_DSP.tex
+++ b/Rapport/1Chapters/1Preanalysis/TechnicalAnalysis_DSP.tex
@@ -6,16 +6,21 @@ The demands for the processor platform have been derived in a mail corresodance 
 \todo[inline]{Reference til CD}
 
 \textbf{Sample rate} \\
-The sample rate must be 96 kHz. 
+The system must be able to handle 96 kHz sample rate since peripheral components will interface be running at this rate.
 
 \textbf{Bit resolution} \\
-There must be support for audio in at least a 24 bit resolution but a 32 bit resolution would be prefered.
+There must be support for audio in at least a 24 bit resolution since the \gls{DAC} chosen by DALI is of 24 bit.
 
 \textbf{\gls{SNR}} \\
-A minimum \gls{SNR} of 120 dB must be achieved.
+A minimum \gls{SNR} of 120 dB on the \gls{DAC} must be achieved. This will provide headroom for digital volume control.
 
 \textbf{Instructions pr. sample.} \\
 The processor must a least be able to run 1024 intructions pr. sample. which would give approximately 100 \gls{MIPS}
+
+
+\textbf{Memory for both an equalizer and multi band limiter} \\
+The platform will consist of an equalizer and limiter when finished. This project will however focus on the equalizer and sensory system. Hence it only desireable to leave TBD room for an multi band limiter which is desired by DALI. 
+
 
 \textbf{Interfacing} \\
 The platform must be able to interface with an ADC and DAC with the bus type \gls{I2S}. Besides the interfacing with the ADC and DAC the platform must be able to interface with the chosen sensor in \autoref{sec:Sensor}.
