--- a/Rapport/figures/parametric_eq_preanalysis_Q.tex
+++ b/Rapport/figures/parametric_eq_preanalysis_Q.tex
@@ -7,8 +7,8 @@
 \begin{tikzpicture}
 
 \begin{axis}[%
-width=2.5in,
-height=2in,
+width=2in,
+height=1.7in,
 at={(1.011in,0.642in)},
 scale only axis,
 xmode=log,
@@ -20,8 +20,8 @@ xmajorgrids,
 xminorgrids,
 ymin=-5,
 ymax=8,
-ylabel={Magnitude [dB]},
 ymajorgrids,
+yticklabels={\empty},
 axis background/.style={fill=white}
 ]
 \addplot [color=black,solid,line width=1.0pt,forget plot]
