--- a/Rapport/figures/parametric_eq_preanalysis_db.tex
+++ b/Rapport/figures/parametric_eq_preanalysis_db.tex
@@ -7,8 +7,8 @@
 \begin{tikzpicture}
 
 \begin{axis}[%
-width=2.5in,
-height=2in,
+width=2in,
+height=1.7in,
 at={(1.011in,0.642in)},
 scale only axis,
 xmode=log,
@@ -20,7 +20,7 @@ xmajorgrids,
 xminorgrids,
 ymin=-5,
 ymax=8,
-ylabel={Magnitude [dB]},
+yticklabels={\empty},
 ymajorgrids,
 axis background/.style={fill=white}
 ]
