--- a/Rapport/figures/parametric_eq_preanalysis_fc.tex
+++ b/Rapport/figures/parametric_eq_preanalysis_fc.tex
@@ -7,8 +7,8 @@
 \begin{tikzpicture}
 
 \begin{axis}[%
-width=6.028in,
-height=4.754in,
+width=2in,
+height=1.7in,
 at={(1.011in,0.642in)},
 scale only axis,
 xmode=log,
@@ -19,8 +19,8 @@ xlabel={Frequency [Hz]},
 xmajorgrids,
 xminorgrids,
 ymin=-5,
-ymax=10,
-ylabel={Magnitude [dB]},
+ymax=8,
+yticklabels={\empty},
 ymajorgrids,
 axis background/.style={fill=white}
 ]
