--- a/Rapport/1Chapters/1Preanalysis/TechnicalAnalysis_DSP.tex
+++ b/Rapport/1Chapters/1Preanalysis/TechnicalAnalysis_DSP.tex
@@ -1,6 +1,22 @@
 \section{Processor Platform}
 This section will reference the demands for the processor platform given by DALI and analyse which processor platform will be optimal for these condition. 
 
+\begin{table}[H]
+\centering
+\ra{1.3}
+\begin{tabular}{S[table-format=1]ccccccc} \toprule
+    {Harmonic} & {$A_2$} & {$A_3$} & {$A_4$} & {$A_5$} & {$A_6$} & {$A_7$} & {$A_8$} \\ \midrule 
+    $F_o$  & 110  & 220  & 440   & 880  & 1760   & 3520   & 7040   \\ \bottomrule
+    2      & 220  & 440  & 880   & 1760 & 3520   & 7040   & 14080  \\ 
+    3      & 330  & 660  & 1320  & 2640 & 5280   & 10560  & 21120  \\
+    4      & 440  & 880  & 1760  & 3520 & 7040   & 14080  & 28160  \\ 
+    5      & 550  & 1100 & 2200  & 4400 & 8800   & 17600  & 35200  \\ \bottomrule 
+\end{tabular}
+\caption{her kommer til at være en tabel omkring DSP og sammenligning med andre platforme. Fra Signal Processing bogen (Wiley, 3rd)}
+\end{table}
+
+
+
 \subsection*{Demands for the platform}
 The demands for the processor platform have been derived in a mail corresodance with DALI 
 \todo[inline]{Reference til CD}
