User interface done mm

--- a/Rapport/00setup/mybib.bib
+++ b/Rapport/00setup/mybib.bib
@@ -31,6 +31,14 @@
 }
 
 
+@book{WileyDSP,
+    author    = {Sen M. Kuo, Bob H. Lee, Wenshun Tian},
+    title     = {Real-Time Digital Signal Processing: Fundamentals, implementations and applications},
+    publisher = {Wiley},
+    edition  = {3rd},
+    year      = {2013},
+}
+
 @MISC{DaliSpec,
   title = {DALI ZENSOR 1 AX},
   author = {{DALI}},
