--- a/Rapport/1Chapters/1Preanalysis/PreanalysisMAIN.tex
+++ b/Rapport/1Chapters/1Preanalysis/PreanalysisMAIN.tex
@@ -14,4 +14,6 @@
 
 \input{1Chapters/1Preanalysis/TechnicalAnalysis_DSP.tex}
 
+\input{1Chapters/1Preanalysis/TechnicalAnalysis_Interface.tex}
+
 \input{1Chapters/1Preanalysis/PartConclusion.tex}
