lidt forskelligt platform choice

--- a/Rapport/00setup/glossaries.tex
+++ b/Rapport/00setup/glossaries.tex
@@ -34,7 +34,6 @@
 \newacronym{JPEG}{JPEG}{joint photographic experts group}
 \newacronym{DCT}{DCT}{discrete cosine transform}
 \newacronym{RAM}{RAM}{random access memory}
-\newacronym{FPGA}{FPGA}{field programmable gate array}
 \newacronym{TIFF}{TIFF}{tagged image file format}
 \newacronym{MIPI}{MIPI}{mobile industry processor interface}
 \newacronym{RF}{RF}{radio frequency}
@@ -77,6 +76,7 @@
 \newacronym{MIPS}{MIPS}{Millions of instructions per second}
 \newacronym{I2S}{I$^2$S}{Inter-IC sound}
 \newacronym{DSP}{DSP}{Digital Signal Processor}
+\newacronym{FPGA}{FPGA}{Field Programmable Gate Array}
 
 
 
