--- a/Rapport/1Chapters/1Preanalysis/TechnicalAnalysis_Equalizer.tex
+++ b/Rapport/1Chapters/1Preanalysis/TechnicalAnalysis_Equalizer.tex
@@ -40,6 +40,15 @@ Generally speaking, there are two common types of equalizer designs. The first t
 \end{figure}
 
 
+\begin{figure}[H]
+\centering
+\tikzsetnextfilename{graphic_eq}
+\input{figures/graphic_eq.tex}
+\caption{Combining all three parameters.}
+\label{fig:graphic_eq}
+\end{figure}
+
+
 
 %\subsection{The need for equalizing}
 
