--- a/Rapport/figures/parametric_eq_preanalysis_comb.tex
+++ b/Rapport/figures/parametric_eq_preanalysis_comb.tex
@@ -23,6 +23,7 @@ ymin=-6,
 ymax=6,
 ylabel={Magnitude [dB]},
 ymajorgrids,
+yticklabels={\empty},
 axis background/.style={fill=white}
 ]
 \addplot [color=black,dashdotted,line width=1.0pt,forget plot]
